--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 table {
-border: 1px, solid, red;
+border: 1px  solid  red;
 }
 td {
-    border: 1px,solid, blue;
+    border: 1px solid  blue;
+    padding: 5px;
 }
